--- a/pages/adopta.html
+++ b/pages/adopta.html
@@ -52,28 +52,31 @@
                 <section>
                     <div class="container">
                         <div class="row">
-                            <h2 class="col-lg-12">Requisitos de Adopcion</h1>
-                                <img class="col-lg-12" src="../img/p4p-fondo.jpg" alt="">
-                                <p class="col-lg-12">
-                                    Adoptar es un acto de responsabilidad y
-                                    compromiso
-                                    por lo que es importante que estes capacitado para
-                                    hacerlo. Un perro puede vivir entre 14 y 18 años y durante todo ese tiempo dependerá
-                                    de
-                                    vos.
-                                    Algunas cuestiones para tener en cuenta son el espacio disponible de tu casa, el
-                                    tiempo
-                                    que
-                                    tengas para
-                                    brindarle compañía, actividad física y cuidado. También los costos asociados a su
-                                    alimentación, atención
-                                    veterinaria y estadía durante tus vacaciones.
-                                    Para asegurarte una convivencia feliz tu elección debe estar orientada al estilo de
-                                    vida
-                                    que
-                                    llevas y el
-                                    tiempo real que le podes dedicar.
-                                </p>
+                            <div class="col-lg-12">
+                                <h2 >Requisitos de Adopcion</h2>
+                                <hr><br>
+                                    <img class="col-lg-12" src="../img/p4p-fondo.jpg" alt="">
+                                    <p>
+                                        Adoptar es un acto de responsabilidad y
+                                        compromiso
+                                        por lo que es importante que estes capacitado para
+                                        hacerlo. Un perro puede vivir entre 14 y 18 años y durante todo ese tiempo dependerá
+                                        de
+                                        vos.
+                                        Algunas cuestiones para tener en cuenta son el espacio disponible de tu casa, el
+                                        tiempo
+                                        que
+                                        tengas para
+                                        brindarle compañía, actividad física y cuidado. También los costos asociados a su
+                                        alimentación, atención
+                                        veterinaria y estadía durante tus vacaciones.
+                                        Para asegurarte una convivencia feliz tu elección debe estar orientada al estilo de
+                                        vida
+                                        que
+                                        llevas y el
+                                        tiempo real que le podes dedicar.
+                                    </p>
+                            </div>
                         </div>
                     </div>
                 </section>
