--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,7 +48,7 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-lg-12">
                     <h2>Nosotros</h2>
                     <hr><br>
                     <h2>Nuestro Equipo</h2><br>
