Nuevos cambios sobre sass map

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
                 <div>
                     <h3>Seguinos en</h3>
                     <ul class="footer-social">
-                        <li><a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#" target="_blank" class="red--facebook"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#" target="_blank" class="red--twitter"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#" target="_blank" class="red--youtube"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#" target="_blank" class="red--instagram"><i class="fa-brands fa-instagram"></i></a></li>
                     </ul>
                 </div>
                 <div class="copyright">
